# Game-Boy-Reborn

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildSetting.cmake
cmake/modules/: FindSFML.cmake
docs/: AudioProcessingUnit.md
src/: Cartdrige.cpp  Cartdrige.h  Cartridge.cpp  Cartridge.h  CentralProcessingUnit.cpp  CentralProcessingUnit.h  CentralProcessingUnitTypes.h  CentralProcessingUnit_Debug.cpp  CentralProcessingUnit_FetchData.cpp  CentralProcessingUnit_Instructions.cpp  CentralProcessingUnit_Interrupts.cpp  CentralProcessingUnit_PrefixCB.cpp  CentralProcessingUnit_Stack.cpp  Common.h  DebugHelpers.cpp  DebugHelpers.h  Emulator.cpp  Emulator.h  InstructionDefinitions.h  MemoryBus.cpp  MemoryBus.h  PixelProcessingUnit.cpp  PixelProcessingUnit.h  Timer.cpp  Timer.h  main.cpp
src/Core/: AudioProcessingUnit.cpp  AudioProcessingUnit.h  AudioProcessingUnitTypes.cpp  AudioProcessingUnitTypes.h  Cartridge.cpp  Cartridge.h  CentralProcessingUnit.cpp  CentralProcessingUnit.h  CentralProcessingUnitTypes.cpp  CentralProcessingUnitTypes.h  CentralProcessingUnit_Debug.cpp  CentralProcessingUnit_FetchData.cpp  CentralProcessingUnit_PrefixCB.cpp  CentralProcessingUnit_Stack.cpp  DebugHelpers.h  GameBoyEmulator.cpp  GameBoyEmulator.h  Gamepad.cpp  Gamepad.h  InstructionDefinitions.h  MathUtils.h  MemoryBus.cpp  MemoryBus.h  PixelProcessingUnit.cpp  PixelProcessingUnit.h  PixelProcessingUnitTypes.cpp  PixelProcessingUnitTypes.h  Timer.cpp  Timer.h
src/Core/MBC/: MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  MBC3.h  MBC5.cpp  MBC5.h  MemoryBankController.h  MemoryBankControllerFactory.h  NoMemoryBankController.cpp
src/Core/Save/: ISaveStateSerializable.h  SaveStateReader.cpp  SaveStateReader.h  SaveStateWriter.h
src/UI/: Application.cpp  Application.h  ApuViewerWindow.cpp  ApuViewerWindow.h  AudioRingBuffer.h  BackgroundMapViewerWindow.cpp  BackgroundMapViewerWindow.h  DisassemblyWindow.cpp  DisassemblyWindow.h  FileDialogWindow.h  GameBoyAudioStream.cpp  GameBoyAudioStream.h  LoadStateFileDialog.cpp  LoadStateFileDialog.h  LogViewerWindow.cpp  MemoryHexViewerWindow.cpp  MemoryHexViewerWindow.h  NotificationManager.cpp  NotificationManager.h  ObjectViewerWindow.cpp  ObjectViewerWindow.h  RegisterViewerWindow.cpp  RegisterViewerWindow.h  RomFileDialog.cpp  RomFileDialog.h  SaveStateFileDialog.cpp  ToolWindow.cpp  ToolWindow.h
src/UI/Debugger/: ApuViewerPanel.cpp  ApuViewerPanel.h  BackgroundMapViewerPanel.cpp  BackgroundMapViewerPanel.h  BreakpointPanel.cpp  BreakpointPanel.h  CartridgeViewerPanel.cpp  CartridgeViewerPanel.h  DebugPanel.cpp  DebugPanel.h  DebuggerWindow.cpp  DebuggerWindow.h  DisassemblyPanel.cpp  DisassemblyPanel.h  LogViewerPanel.cpp  LogViewerPanel.h  MemoryHexViewerPanel.cpp  MemoryHexViewerPanel.h  ObjectViewerPanel.cpp  ObjectViewerPanel.h  RegisterViewerPanel.cpp  RegisterViewerPanel.h  StackViewerPanel.cpp  StackViewerPanel.h  TileDataViewerPanel.cpp  TileDataViewerPanel.h
src/core/: AudioProcessingUnit.cpp  AudioProcessingUnit.h  AudioProcessingUnitTypes.cpp  AudioProcessingUnitTypes.h  Cartridge.cpp  Cartridge.h  CentralProcessingUnit.cpp  CentralProcessingUnit.h  CentralProcessingUnit_Interrupts.cpp  DebugHelpers.cpp  DebugHelpers.h  Emulator.cpp  Emulator.h  GameBoyEmulator.cpp  GameBoyEmulator.h  Gamepad.cpp  Gamepad.h  MemoryBus.cpp  MemoryBus.h  PixelProcessingUnit.cpp  PixelProcessingUnit.h  PixelProcessingUnitTypes.cpp  PixelProcessingUnitTypes.h  Timer.cpp  Timer.h
src/core/mbc/: MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  MBC3.h  MBC5.cpp  MBC5.h  MemoryBankController.cpp  MemoryBankController.h  MemoryBankControllerFactory.cpp  NoMemoryBankController.cpp  NoMemoryBankController.h
src/core/save/: SaveStateWriter.cpp
src/ui/: Application.cpp  Application.h  AudioRingBuffer.cpp  CartridgeViewerWindow.cpp  CartridgeViewerWindow.h  FileDialogWindow.cpp  FileDialogWindow.h  LoadStateFileDialog.cpp  LogViewerWindow.cpp  LogViewerWindow.h  ObjectViewerWindow.cpp  RegisterViewerWindow.cpp  RegisterViewerWindow.h  RomFileDialog.cpp  RomFileDialog.h  SaveStateFileDialog.cpp  SaveStateFileDialog.h  TileDataViewerWindow.cpp  TileDataViewerWindow.h  ToolWindow.cpp  ToolWindow.h
tests/: AudioProcessingUnitTestFixture.h  AudioProcessingUnit_FrameSequencerTests.cpp  AudioProcessingUnit_IntegrationTests.cpp  AudioProcessingUnit_MixerTests.cpp  AudioProcessingUnit_NoiseChannelTests.cpp  AudioProcessingUnit_PulseChannelTests.cpp  AudioProcessingUnit_RegisterTests.cpp  AudioProcessingUnit_SweepTests.cpp  AudioProcessingUnit_WaveChannelTests.cpp  CMakeLists.txt  CartridgeBatterySaveTests.cpp  CartridgeTestFixture.h  CentralProcessingUnitJsonTestFixture.h  CentralProcessingUnitTestFixture.h  CentralProcessingUnit_ArithmeticInstructionsTests.cpp  CentralProcessingUnit_ControlFlowInstructionsTests.cpp  CentralProcessingUnit_InterruptTimingTests.cpp  CentralProcessingUnit_JsonOpcodeTests.cpp  CentralProcessingUnit_LoadInstructionsTests.cpp  CentralProcessingUnit_LogicalInstructionsTests.cpp  CentralProcessingUnit_MiscInstructionsTests.cpp  CentralProcessingUnit_PrefixCBInstructionsTests.cpp  CentralProcessingUnit_StackInstructionsTests.cpp  FlatMemoryBus.h  MBC1Tests.cpp  MBC2Tests.cpp  MBC3Tests.cpp  MBC5Tests.cpp  MemoryBankControllerFactoryTests.cpp  NoMemoryBankControllerTests.cpp  SaveStateTests.cpp  main.cpp
